output/dev/boolcallcalleeexpr.err
output prefix: llvm/dev/boolcallcalleeexpr
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'Test'

declare void @print_int(i32)

define void @test(i1 %a) {
entry:
  %a1 = alloca i1
  store i1 %a, i1* %a1
  %a2 = load i1, i1* %a1
  br i1 %a2, label %end, label %ifright
}

define i32 @main() {
entry:
  call void @test(i1 true)
  ret i32 0

end:                                              ; preds = %ifright, %entry
  %phival = phi i1 [ %a2, %entry ], [ false, %ifright ]
  %zexttmp = zext i1 %phival to i32
  call void @print_int(i32 %zexttmp)
  ret i32 0

ifright:                                          ; preds = %entry
  br label %end
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/dev/boolcallcalleeexpr.llvm" -o "llvm/dev/boolcallcalleeexpr.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/boolcallcalleeexpr.llvm:10:20: error: use of undefined value '%end'
  br i1 %a2, label %end, label %ifright
                   ^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/dev/boolcallcalleeexpr.llvm.bc" -o "llvm/dev/boolcallcalleeexpr.llvm.s" ... ok
linking:gcc -o "llvm/dev/boolcallcalleeexpr.llvm.exec" "llvm/dev/boolcallcalleeexpr.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/dev/boolcallcalleeexpr.llvm.exec ... ok
